Complete hero and achievement sections

--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Girl Code Clone</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Girl Code Clone</title>
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- NAVBAR, HERO SECTION -->
+    <main>
+      <header class="container grid">
+        <a href=""
+          ><img src="assets/images/logo.png" alt="logo" class="logo"
+        /></a>
+        <nav class="nav">
+          <a href="#">home</a>
+          <a href="#">build</a>
+          <a href="#">locations</a>
+          <a href="#">workshops</a>
+          <a href="#">team</a>
+          <a href="#">join</a>
+        </nav>
+      </header>
+      <section class="hero container-720">
+        <h1>Welcome to The Girl Code</h1>
+        <h3>Inspiring girls to discover and pursue programming</h3>
+        <a href="#"><button class="btn">join us</button></a
+        ><a href="#"><button class="btn">learn more</button></a>
+      </section>
+    </main>
+
+    <br>
+    <br>
+    <br>
+
+    <!-- ACHIEVEMENT -->
+    <section class="achievement container-720">
+      <section class="three-cols">
+        <h1>10</h1>
+        <h3>active chapters</h3>
+      </section><!--
+      --><section class="three-cols">
+        <h1>1600+</h1>
+        <h3>students impacted</h3>
+      </section><!--
+      --><section class="three-cols">
+        <h1>35+</h1>
+        <h3>workshops conducted</h3>
+      </section>
+    </section>
+
+    <br>
+    <br>
+    <br>
+    
+  </body>
 </html>
