Complete image gallery section

--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Girl Code Clone</title>
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">  
   </head>
   <body>
     <!-- NAVBAR, HERO SECTION -->
     <main>
       <header class="container grid">
-        <a href=""
-          ><img src="assets/images/logo.png" alt="logo" class="logo"
+        <a href="#"
+          ><img src="assets/images/logo.png" alt="main logo" class="logo"
         /></a>
         <nav class="nav">
           <a href="#">home</a>
@@ -42,7 +40,7 @@
     <br>
 
     <!-- ACHIEVEMENT -->
-    <section class="achievement container-720">
+    <section class="achievement">
       <section class="three-cols">
         <h1>10</h1>
         <h3>active chapters</h3>
@@ -60,6 +58,73 @@
     <br>
     <br>
     <br>
-    
+
+    <!-- MISSION -->
+    <section class="mission">
+      <section class="content">
+        <h3>mission</h3>
+        <p>
+          Bridging the gender gap in Tech one free workshop at a time! We host fun and friendly workshops for young students to learn programming at schools and universities local to them. Through our unique approach, and our intuitive curriculum, we plan to give rise to a new generation of female programmers set to take the world by storm!
+        </p>
+      </section>
+    </section>
+
+    <br>
+    <br>
+    <br>
+
+    <!-- SUPPERHERO -->
+    <section class="supper-hero container-720">
+      <section class="two-cols">
+        <section>
+          <h1>confidence</h1>
+          <p>
+            Instill confidence in young girls to stand tall and unapologetically in an industry dominated by men.
+          </p>
+        </section>
+        <section>
+          <h1>community</h1>
+          <p>
+            Build a tight-knit community of young female programmers to support, motivate, and inspire each other.
+          </p>
+        </section>
+        <section>
+          <h1>curiosity</h1>
+          <p>
+            Inspire students to seek more knowledge, to question everything, and to build on their curiosity for Computer Science.
+          </p>
+        </section>
+      </section><!--
+      --><section class="two-cols">
+          <img src="assets/images/superhero.png" alt="super hero image" id="super-hero">
+      </section>
+    </section>
+
+    <br>
+    <br>
+    <br>
+
+    <!-- IMAGE GALLERY -->
+    <section class="image-gallery">
+      <section class="content">
+        <h1>image gallery</h1>
+        <section class="images">
+          <img src="assets/images/workshop-3.jpg" alt="main workshop image" id="main-image">
+          <nav>
+            <img src="assets/images/workshop-1.jpg" alt="group workshop 1">
+            <img src="assets/images/workshop-2.jpg" alt="group workshop 2">
+            <img src="assets/images/workshop-3.jpg" alt="group workshop 3">
+            <img src="assets/images/graduates.jpg" alt="group workshop 4">
+            <img src="assets/images/workshop-1.jpg" alt="group workshop 5">
+            <img src="assets/images/workshop-2.jpg" alt="group workshop 6">
+          </nav>
+        </section>
+      </section>
+    </section>
+
+    <br>
+    <br>
+    <br>
+
   </body>
 </html>
