--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">  
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
   </head>
   <body>
     <!-- NAVBAR, HERO SECTION -->
@@ -107,10 +108,10 @@
     <!-- IMAGE GALLERY -->
     <section class="image-gallery">
       <section class="content">
-        <h1>image gallery</h1>
+        <h1 class="section-title">image gallery</h1>
         <section class="images">
           <img src="assets/images/workshop-3.jpg" alt="main workshop image" id="main-image">
-          <nav>
+          <nav class="image-gallery-nav">
             <img src="assets/images/workshop-1.jpg" alt="group workshop 1">
             <img src="assets/images/workshop-2.jpg" alt="group workshop 2">
             <img src="assets/images/workshop-3.jpg" alt="group workshop 3">
@@ -122,9 +123,153 @@
       </section>
     </section>
 
-    <br>
-    <br>
-    <br>
+    <br><br><br>
+
+    <!-- PROGRAMS -->
+    <section class="programs container-720">
+      <h1 class="section-title">our programs</h1>
+      <section>
+        <section class="four-cols">
+          <img src="assets/images/Workshops.png" alt="workshops">
+          <h2>workshops</h2>
+          <p>
+            We host free coding workshops in Python & HTML CSS at schools and universities.
+          </p>
+        </section><!--
+        --><section class="four-cols">
+          <img src="assets/images/Online.png" alt="workshops">
+          <h2>online</h2>
+          <p>
+            Due to covid-19, we’ve moved our workshops online to virtual platforms that will allow us for a more hands-on teaching.
+          </p>
+        </section><!--
+        --><section class="four-cols">
+          <img src="assets/images/Community.png" alt="workshops">
+          <h2>community</h2>
+          <p>
+            Our slack community has over 300 women who love Computer Science! We also host regular bootcamps on all things Tech.
+          </p>
+        </section><!--
+        --><section class="four-cols">
+          <img src="assets/images/Mentors.png" alt="workshops">
+          <h2>mentors</h2>
+          <p>
+            One-on-One help and advice from experienced women in tech! We have mentors ready to help for our workshops and slack community!
+          </p>
+        </section>
+      </section>
+    </section>
+
+    <br><br><br>
+
+    <!-- SOCIAL MEDIA -->
+    <section class="social-media">
+      <h1 class="section-title">social media</h1>
+      <p>Selection from our <span>socials</span></p>
+      <section class="cols">
+        <section class="three-cols">
+          <img src="assets/images/girlgroup.jpg" alt="a group of women standing">
+        </section><!--
+        --><section class="three-cols">
+          <img src="assets/images/girlcodes.jpg" alt="a girl coding on her laptop">
+        </section><!--
+        --><section class="three-cols">
+          <img src="assets/images/workshop-day.jpg" alt="workshop day in singapore">
+        </section><!--
+        --><section class="three-cols">
+          <img src="assets/images/girlpower.jpg" alt="girl power pose">
+        </section><!--
+        --><section class="three-cols">
+          <img src="assets/images/scholarships.jpg" alt="scholarships for indian women">
+        </section><!--
+      --><section class="three-cols">
+        <img src="assets/images/love.jpg" alt="sign of love">
+      </section>
+      </section>
+    </section>
+    </section>
+
+    <br><br><br>
+
+    <!-- FEATURED -->
+    <section class="featured">
+      <h1 class="section-title">featured</h1>
+      <section class="cols">
+        <section class="two-cols">
+          <iframe frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="100%" src="https://www.youtube.com/embed/CkTAROiMe6M?autoplay=0&amp;mute=0&amp;controls=1&amp;origin=http%3A%2F%2Fthegirlcode.co&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;iv_load_policy=3&amp;modestbranding=1&amp;enablejsapi=1&amp;widgetid=1" id="widget2"></iframe>
+          <p>
+            Join us as we speak with Mina, and break down the fundamentals of technology on 'Tech Talks'. She breaks down web development for us and talks about her journey in the field.
+          </p>
+        </section><!--
+        --><section class="two-cols">
+          <iframe frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="100%" src="https://www.youtube.com/embed/GBhOYmd13Qo?autoplay=0&amp;mute=0&amp;controls=1&amp;origin=http%3A%2F%2Fthegirlcode.co&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;iv_load_policy=3&amp;modestbranding=1&amp;enablejsapi=1&amp;widgetid=3" id="widget4"></iframe>
+          <p>
+            Join us as we speak with Annie and Kass, and break down the fundamentals of technology on 'Tech Talks'. They speak about the future of frontend with sites like Wix and Als like GPT3
+          </p>
+        </section>
+      </section>
+    </section>
+
+    <br><br><br>
+
+    <!-- START A CHAPTER -->
+    <section class="chapter">
+      <h1 class="section-title">start a chapter</h1>
+      <p>
+        Help us bridge the gender gap in tech one free workshop at a time. Establish your own chapter and work towards making an impact with us. Start a chapter in your city today.
+      </p>
+      <div class="btn-image">
+        <button class="apply-donate"><a href="#">apply now</a></button>
+        <img src="assets/images/map.png" alt="">
+      </div>
+    </section>
+
+    <br><br><br>
+
+    <!-- DONATE -->
+    <section class="donate">
+      <section class="col-one">
+        <img src="assets/images/givelove.jpg" alt="">
+      </section><!--
+      --><section class="col-two">
+        <h1>help support the girl code</h1>
+        <p>The Girl Code is a non-profit organization and we do not take any fee for our workshops. Please consider donating to the organization and supporting our cause!</p>
+        <button class="apply-donate"><a href="#">donate</a></button>
+      </section>
+    </section>
+
+    <br><br><br>
+
+    <footer>
+      <section class="grid">
+        <section class="three-cols" id="col-one">
+          <p>
+            GirlCode Humantarian Foundation is a section-8 company registered under the Government of India on date 29th November 2017.
+          </p>
+          <p>
+            Contact us at writetothegirlcode@gmail.com
+          </p>
+        </section><!--
+        --><section class="three-cols" id="handles">
+          <p>
+            <i class="fa fa-twitter"></i> @thegirlcode_co
+          </p>
+          <p>
+            <i class="fa fa-instagram"></i> @thegirlcode_co
+          </p>
+          <p>
+            <i class="fa fa-facebook"></i> @thegirlcode_co
+          </p>
+        </section><!--
+        --><section class="three-cols" id="col-three">
+          <h5>Partner</h5>
+          <img src="assets/images/digitalocean-2.jpg" alt="" id="digital-ocean">
+        </section>
+      </section>
+      <section class="copy-right">
+        <p>Copyright @ 2020, Made by GirlCode Humantarian Foundation x Plutus</p>
+      </section>
+    </footer>
 
   </body>
 </html>
